# dxvk-adlx

./: README.md  meson.build  version.h.in
inc/: adl_sdk.h  d3d12.h
src/: adlx_common.h  adlx_private.h  atiadlxx.def  meson.build
src/amdxc/: amdxc.def  main.cpp
src/atiadlxx/: adlx_common.h  atiadlxx-adapter.cpp  atiadlxx-display.cpp  atiadlxx-graphics.cpp  atiadlxx.cpp  atiadlxx.def
src/dxvk/: dxvk_interfaces.cpp  dxvk_interfaces.h
src/util/: com_pointer.h
